# jsonparser

./: CMakeLists.txt  README.md
cmake/: Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  errors.err  fmap.hpp  interfaces.hpp  json_class.cpp  json_class.hpp  main.cpp  utils.hpp
